--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -48,5 +48,5 @@ jobs:
           allowUpdates: true
           artifacts: ${{env.executable}}
           tag: ${{inputs.release_version}}
-          commit: master
+          commit: main
           token: ${{ secrets.GITHUB_TOKEN }}
