update github actions

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,12 +1,10 @@
 name: release
 
 on:
+  push:
+    tags:
+      - 'v*'
   workflow_dispatch:
-    inputs:
-      release_version:
-        description: Version to release (vX.X.X)
-        required: true
-        type: string
 
 jobs:
   build:
@@ -31,6 +29,13 @@ jobs:
 
       - name: Check out code into the Go module directory
         uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - name: Fetch all tags
+        run: git fetch --force --tags
+      - name: Get the tag
+        id: tag_name
+        run: echo "TAG_NAME=${GITHUB_REF/refs\/tags\//}" >> $GITHUB_ENV
 
       - name: Get dependencies
         run: go get -v -t -d ./...
@@ -47,6 +52,7 @@ jobs:
         with:
           allowUpdates: true
           artifacts: ${{env.executable}}
-          tag: ${{inputs.release_version}}
+          tag: ${{env.TAG_NAME}}
           commit: main
           token: ${{ secrets.GITHUB_TOKEN }}
+          omitBodyDuringUpdate: true
