Fix example api_url, ending with a slash breaks the program.

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -1,6 +1,6 @@
 extract_days: 10
 utility:
-  api_url: https://novec.smarthub.coop/
+  api_url: https://novec.smarthub.coop
   username: johndoe@gmail.com
   password: novec_password
   account: 1234567001
