add configurable timezone
- For some reason, the SmartHub API decided to return "unix timestamps", but in the utility's timezone instead of in UTC, which would be the normal choice for an API.
- My utility returned timestamps in the EST timezone, but other users have reported their local timezones are used as well.

--- a/config.example.yaml
+++ b/config.example.yaml
@@ -5,6 +5,7 @@ smarthub:
   password: smarthub_password
   account: 1234567001
   service_location: 123456
+  timezone: America/New_York
 influxdb:
   host: https://localhost:8428
   auth_token: johndoe:influx_password
